objects/MedProSC__MedProPassOneSearchResult__c.object
<CustomObject>
    <description>A transient custom object for storing the results of a MedPro Search connector &quot;Search MedPro&quot; action; (MedPro refers to this as a &quot;PassOne&quot; WS call)

When creating new fields to be accepted from the MedPro service, make sure that the label is exactly as MedPro sends it.</description>
    <fields>
        <fullName>MedProSC__CDS_Number__c</fullName>
        <label>cds-number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__DEA_Number__c</fullName>
        <label>dea-number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Existing_Object_Ids__c</fullName>
        <label>Existing Object Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Existing_Object_Types__c</fullName>
        <label>Existing Object Types</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedProMasterID__c</fullName>
        <label>medpro-master-id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__address_line_one__c</fullName>
        <label>address-line-one</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__address_line_two__c</fullName>
        <label>address-line-two</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__address_state__c</fullName>
        <label>address-state</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__adj_state_lic_exp_date__c</fullName>
        <label>adj-state-lic-exp-date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__affiliated_org__c</fullName>
        <label>affiliated-org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__ama_medproid_number__c</fullName>
        <label>ama-medproid-number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__best_mmid_specialty_primary__c</fullName>
        <label>best-mmid-specialty-primary</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__best_mmid_specialty_secondary__c</fullName>
        <label>best-mmid-specialty-secondary</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__best_specialty_primary__c</fullName>
        <label>best-specialty-primary</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__best_specialty_secondary__c</fullName>
        <label>best-specialty-secondary</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__cds_license_num__c</fullName>
        <label>cds-license-num</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__cds_medproid__c</fullName>
        <label>cds-medproid</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__city__c</fullName>
        <label>city</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__clientId__c</fullName>
        <label>customer-client-id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__country__c</fullName>
        <label>country</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__customer_business_unit__c</fullName>
        <label>customer-business-unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__customer_comment_1__c</fullName>
        <label>customer-comment-1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__customer_comment_2__c</fullName>
        <label>customer-comment-2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__customer_comment_3__c</fullName>
        <label>customer-comment-3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__customer_comment__c</fullName>
        <label>customer-comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MedProSC__customer_script_tracking__c</fullName>
        <label>customer-script-tracking</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__customer_state_grace_period__c</fullName>
        <label>customer-state-grace-period</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__customer_territory_id__c</fullName>
        <label>customer-territory-id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__dea_medproid_number__c</fullName>
        <label>dea-medproid-number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__error_code__c</fullName>
        <label>error-code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__error_message__c</fullName>
        <label>error-message</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__first_name__c</fullName>
        <label>first-name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__last_name__c</fullName>
        <label>last-name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__medpro_master_id__c</fullName>
        <label>medpro-master-idxxx</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__medpro_universe_check__c</fullName>
        <label>medpro-universe-check</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__medproid__c</fullName>
        <label>medproid</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__middle_initial__c</fullName>
        <label>middle-initial</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__npi_cms_alt_first_name__c</fullName>
        <label>npi-cms-alt-first-name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__npi_cms_alt_last_name__c</fullName>
        <label>npi-cms-alt-last-name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__npi_cms_first_name__c</fullName>
        <label>npi-cms-first-name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__npi_cms_last_name__c</fullName>
        <label>npi-cms-last-name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__npi_cms_lic_state_id1__c</fullName>
        <label>npi-cms-lic-state-id1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__npi_cms_state_lic_num1__c</fullName>
        <label>npi-cms-state-lic-num1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__npi_formatted_state_license_number__c</fullName>
        <label>npi-formatted-state-license-number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__npi_medproid_number__c</fullName>
        <label>npi-medproid-number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__npi_number__c</fullName>
        <label>npi-number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__npi_on_pecos_o_and_r__c</fullName>
        <label>npi-on-pecos-o-and-r</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__npi_primary_taxonomy_code__c</fullName>
        <label>npi-primary-taxonomy-code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__npi_primary_taxonomy_name__c</fullName>
        <label>npi-primary-taxonomy-name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__previously_searched_hcp__c</fullName>
        <label>previously-searched-hcp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__related_licenses__c</fullName>
        <label>related-licenses</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__samp_desig_status__c</fullName>
        <label>samp-desig-status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__samp_fed_sanctions__c</fullName>
        <label>samp-fed-sanctions</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__samp_last_received__c</fullName>
        <label>samp-last-received</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__samp_license_status__c</fullName>
        <label>samp-license-status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__samp_overall__c</fullName>
        <label>samp-overall</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__sampleability_exp_overall__c</fullName>
        <label>sampleability-exp-overall</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__sln_medproid_number__c</fullName>
        <label>sln-medproid-number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__sln_professional_designation__c</fullName>
        <label>sln-professional-designation</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__sln_state_license_number__c</fullName>
        <label>sln-state-license-number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__state__c</fullName>
        <label>state</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__state_grace_period__c</fullName>
        <label>state-grace-period</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__state_of_license__c</fullName>
        <label>state-of-license</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__state_reporting_chk__c</fullName>
        <label>state-reporting-chk</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__state_spec_id__c</fullName>
        <label>state-spec-id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__suffix_name__c</fullName>
        <label>suffix-name</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__title__c</fullName>
        <label>title</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__transaction_id__c</fullName>
        <label>transaction_id</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__zip__c</fullName>
        <label>zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>MedPro Pass 1 Search Result</label>
    <listViews>
        <fullName>MedProSC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MedPro Pass 1 Search Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedPro Pass 1 Search Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>